--- a/src/app/app/components/horarios/horarios.component.html
+++ b/src/app/app/components/horarios/horarios.component.html
@@ -1,1 +1,65 @@
-<p>horarios works!</p>
+<div class="container">
+  <div class="selector-container">
+    <mat-form-field appearance="fill">
+      <mat-label>Seleccionar Día</mat-label>
+      <mat-select [(value)]="diaSeleccionado" (selectionChange)="filtrarHorarios($event.value)">
+        <mat-option value="todos">Todos los días</mat-option>
+        <mat-option value="lunes">Lunes</mat-option>
+        <mat-option value="martes">Martes</mat-option>
+        <mat-option value="miercoles">Miércoles</mat-option>
+        <mat-option value="jueves">Jueves</mat-option>
+        <mat-option value="viernes">Viernes</mat-option>
+      </mat-select>
+    </mat-form-field>
+  
+  </div>
+
+  <div class="table-container">
+    <table mat-table [dataSource]="horarios" class="mat-elevation-z8">
+
+      <ng-container matColumnDef="hora">
+        <th mat-header-cell *matHeaderCellDef> Hora </th>
+        
+        <td mat-cell *matCellDef="let horario"> {{horario.hora}} </td> <!-- define las celdas de la columna -->
+      </ng-container>
+
+      <ng-container *ngIf="diaSeleccionado !== 'todos'" [matColumnDef]="diaSeleccionado">
+        <th mat-header-cell *matHeaderCellDef> {{ diaSeleccionado | titlecase }} </th>
+        <td mat-cell *matCellDef="let horario"> {{horario[diaSeleccionado]}} </td>
+      </ng-container> <!-- muestra el horario del dia seleccionado -->
+
+      <ng-container *ngIf="diaSeleccionado === 'todos'">
+        <ng-container matColumnDef="lunes">
+          <th mat-header-cell *matHeaderCellDef> Lunes </th>
+          <td mat-cell *matCellDef="let horario"> {{horario.lunes}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="martes">
+          <th mat-header-cell *matHeaderCellDef> Martes </th>
+          <td mat-cell *matCellDef="let horario"> {{horario.martes}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="miercoles">
+          <th mat-header-cell *matHeaderCellDef> Miércoles </th>
+          <td mat-cell *matCellDef="let horario"> {{horario.miercoles}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="jueves">
+          <th mat-header-cell *matHeaderCellDef> Jueves </th>
+          <td mat-cell *matCellDef="let horario"> {{horario.jueves}} </td>
+        </ng-container>
+
+        <ng-container matColumnDef="viernes">
+          <th mat-header-cell *matHeaderCellDef> Viernes </th>
+          <td mat-cell *matCellDef="let horario"> {{horario.viernes}} </td>
+        </ng-container>
+      </ng-container>
+
+
+
+     <!--  define cómo se renderizan las filas de cabecera y las filas de datos de la tabla. -->
+      <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+      <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+    </table>
+  </div>
+</div>
