--- a/src/app/app/components/navbar/navbar.component.html
+++ b/src/app/app/components/navbar/navbar.component.html
@@ -8,7 +8,7 @@
         <a routerLink="/horarios" class="navbar-link">Horarios</a>
       </li>
       <li class="navbar-item">
-        <a routerLink="/administrar-materias" class="navbar-link">Administrar Materias</a>
+        <a routerLink="/administrar-horarios" class="navbar-link">Administrar Horarios</a>
       </li>
       <li class="navbar-item">
         <a routerLink="/convertidor-fechas" class="navbar-link">Convertidor de fechas</a>
