--- a/src/app/app/components/administrar-horarios/administrar-horarios.component.html
+++ b/src/app/app/components/administrar-horarios/administrar-horarios.component.html
@@ -1,8 +1,13 @@
 
-<button [routerLink]="['/administrar-horarios/alta']">Agregar Horarios</button>
+
+<div class="botones">
 
 
- <button>Eliminar Horario</button>
+  <button class="btnAgregarHorarios" [routerLink]="['/administrar-horarios/alta']">Agregar Horarios</button>
+
+  <button class="btnEliminarHorarios">Eliminar Horarios</button>
+
+</div>
 
 
 
