--- a/src/app/app/components/alta-horarios/alta-horarios.component.html
+++ b/src/app/app/components/alta-horarios/alta-horarios.component.html
@@ -1,8 +1,7 @@
 
-<div class="container">
-    <h2>Agregar nuevo horario</h2>
-    
+<div class="container"> 
     <form (ngSubmit)="guardarHorario()">
+      <h2>Agregar nuevo horario</h2>
       <div class="forms">
         <label> Hora:</label>
         <input type="text"  [(ngModel)]="nuevoHorario.hora" name="hora" required>
@@ -33,8 +32,10 @@
         <input type="text" [(ngModel)]="nuevoHorario.viernes" name="viernes">
       </div>
       
-      <button type="submit" class="botones">Guardar horario</button>
-      <button type="button" class="botones" (click)="borrarCampos()">Borrar campos</button>
+      <div class="botones">
+      <button type="submit" >Guardar horario</button>
+      <button type="button" (click)="borrarCampos()">Borrar campos</button>
+      </div>
     </form>
   </div>
   
